# InterLines

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.gpu  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yaml
_stubs/: docx.pyi
docs/: ARCHITECTURE.md  CONTRACTS.md  CONTRIBUTING.md  PROMPTS.md  ROADMAP.md
examples/briefs/: Americas AI Action Plan.md  Natively Sparse Attention.md
examples/trace/: 20251209_225432_Native_Sparse_Attention.json  20251209_230043_Americas-AI-Action-Plan.json
samples/: Distributed_Confidence.docx
schemas/: block.v1.json  explanation.v1.json  public_brief.v1.json  relevance.v1.json  review_criteria.v1.json  review_report.v1.json  term.v1.json  term_card.schema.json  timeline_event.v1.json
scripts/: smoke.py
src/interlines/: __init__.py  cli.py
src/interlines/agents/: brief_builder.py  citizen_agent.py  editor_agent.py  explainer_agent.py  history_agent.py  jargon_agent.py  parser.py  parser_agent.py  parser_extractor.py  planner_agent.py
src/interlines/api/: app.py  background.py  job_store.py  schemas.py  server.py
src/interlines/api/routers/: interpret.py
src/interlines/core/: __init__.py  result.py  settings.py
src/interlines/core/blackboard/: memory.py  storage.py  trace.py
src/interlines/core/contracts/: artifact.py  block.py  explanation.py  planner.py  public_brief.py  relevance.py  review.py  term.py  timeline.py
src/interlines/core/evals/: readability.py
src/interlines/core/planner/: dag.py  strategy.py
src/interlines/llm/: __init__.py  client.py  models.py
src/interlines/pipelines/: __init__.py  public_translation.py
tests/: test_agent_brief_builder.py  test_agent_citizen.py  test_agent_editor.py  test_agent_history.py  test_agent_jargon.py  test_agent_parser.py  test_agents_pipeline.py  test_agnet_explainer.py  test_api_health.py  test_api_integration.py  test_blackboard.py  test_cli.py  test_contracts.py  test_contracts_schema.py  test_llm_client.py  test_parser_extractor.py  test_pipeline_llm_planner.py  test_pipeline_public_translation.py  test_pipeline_replan.py  test_pipeline_report.py  test_planner.py  test_result.py  test_settings.py  test_smoke.py
