[project]
name = "interlines"
version = "0.1.0"
description = "Interlines (行间): A multi-agent generative system for public knowledge translation with a historical lens."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "GNU GLP v3.0" }
authors = [{ name = "Peiyu Chen" }]
dependencies = [
  "pydantic>=2.8",
  "typing-extensions>=4.9",
  "httpx>=0.27",
  "python-dotenv>=1.0",
]

[dependency-groups]
dev = ["pytest>=8","pytest-cov>=5","ruff>=0.6","mypy>=1.11","pre-commit>=3.8"]
api = ["fastapi>=0.115","uvicorn[standard]>=0.30"]
ui  = ["streamlit>=1.38"]
viz = ["networkx>=3.3","pyvis>=0.3.2","matplotlib>=3.9"]
llm = ["openai>=1.51"]

[project.scripts]
interlines = "interlines.cli:app"
interlines-api = "interlines.api.server:main"
interlines-ui = "interlines.ui.app:main"

[tool.uv]
package = true
default-groups = ["dev"]
