[project]
name = "interlines"
version = "0.0.1"
description = "Public Knowledge Interpreter (InterLines) — turn complex papers & policies into accessible public briefs."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "InterLines Team" }]
license = { text = "GNU GPL" }
scripts = { interlines = "interlines.cli:main", "interlines-api" = "interlines.api.server:run" }

[tool.uv]
# Install as editable for local development
package = true

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.10.0",
  "ruff>=0.6.8",
  "types-requests>=2.32.0.20240914",
]
api = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0"
]

# -------------------------
# Ruff (lint + formatter)
# -------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["artifacts"]

[tool.ruff.lint]
select = ["E","F","W","B","I","UP","C90","RUF"]
ignore = ["E203"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["interlines"]
combine-as-imports = true

[tool.ruff.format]
docstring-code-format = true

# -------------
# Mypy
# -------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
pretty = true
show_error_codes = true
plugins = []

# -------------
# Pytest
# -------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --disable-warnings --maxfail=1"
testpaths = ["tests"]
pythonpath = ["src"]